Version 0.4c
 Changes:
  - Made a small adjustment to Perturba Weapon Testing's intel text clarifying that a ship which is destroyed usually doesn't help further the quest progress
     > "It's a feature."

 Bugfixes:
  - The Perturba weapon testing event now needs 100% progress to be completed, instead of 3%


Version 0.4b
 Bugfixes:
  - Fixed a bug that could permanently brick a save under specific circumstances
     > *WHOOPS*.
  - Minor fix for the event-based sound effect added last version


Version 0.4a
 Changes:
  - Made the "A Profitable Partnership" intel get pinned as important by default
  - Added a sound effect to a... certain event... in the event where you meet the Perturba contact.

 Bugfixes:
  - Fixed a bug where "A profitable Partnership" would sometimes not properly register memory flags and soft-locked the mod's progression
     > To fix a soft-locked savegame, if you have "A profitable Partnership", run the console command "VassMeetPerturbaContact". If you don't have that intel, this should not affect you
  - Hopefully fixed a bug where Vass fleets would continue chasing you while they were trying to leave you alone
  - Fixed a bug where campaign-side engines displayed incorrectly on the Schiavona


Version 0.4 : Time for another sprite rework
 Additions:
  - Added a second Frigate, the Akrafena, with a new shipsystem
  - Added a new Perturba event allowing you to get legitimate access to their ships once your relations are high enough
  - Started implementing the as-of-yet hidden Family Power mechanic with som of the player's actions
     > Currently does nothing notable and can't be seen in-game: that will change later
  - Started implementing the four other families' Elite bonuses
     > Still not available in the campaign, but there are some test missions allowing you to get a preview of what to expect

 Graphics:
  - Updated all ship sprites, courtesy of Gwyvern